--- a/src/components/Quote/styles.css
+++ b/src/components/Quote/styles.css
@@ -1,16 +1,18 @@
 .quoteContainer{
-  display: flex;
-  justify-content: center;
+  display:flex;
+  justify-content: flex-start;
   align-items: center;
-  flex-direction: column;
-  text-align: left;
   height: auto;
-  width: 814px;
+
   border-left: solid 8px #F7DF94;
   font-size: 36px;
   font-family: Raleway;
+  
 } 
 
 .quoteContainer p {
-  width: 614px;
+  margin-left: 100px;
+  
 }
+
+
