--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,37 +1,42 @@
-.container{
-  width: 100vw;
-  height: 100vh;
-}
-
-.content{
+.container {
   display:flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+}
+
+.content {
+  display:flex;
   flex-direction: column;
-  height: 90%;
+  align-items: center;
+  justify-content: center;
+  height: 800px;
+  width: 900px;
+  
 }
 
 .authorContainer {
-  width: 672px;
-  height: 151px;
-  margin-top: 100px;
   display:flex;
   justify-content: center;
-  align-items: flex-start;
   flex-direction: column;
+  align-items: flex-start;
+  width: 670px;
+  height: 150px;
+  padding: 30px;
+  margin-top: 84px;
+
   background-color: transparent;
   border: none;
   cursor:pointer;
-  transition: all 0.2s;
   color: #4F4F4F;
-  padding: 30px;
   text-decoration: none;
+  transition: all 0.2s;
 }
 
 .authorContainer:hover{
   background: #333333;
   color: #f2f2f2;
-
 }
 
 .authorContainer p {
