--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -1,9 +1,7 @@
 header {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
-  height: 100px;
-  width: 100%;
+  height: 10vh;
 }
 
 header button {
